restwebapp
/products/id delete doc
